include/El/core/DistMatrix.h

/* An anonymous struct meant as a placeholder for ElementalMatrix<T>
   ----------------------------------------------------------------- */
typedef struct ElDistMatrix_iDummy* ElDistMatrix_i;
typedef struct ElDistMatrix_sDummy* ElDistMatrix_s;
typedef struct ElDistMatrix_dDummy* ElDistMatrix_d;
typedef struct ElDistMatrix_cDummy* ElDistMatrix_c;
typedef struct ElDistMatrix_zDummy* ElDistMatrix_z;
typedef const struct ElDistMatrix_iDummy* ElConstDistMatrix_i;
typedef const struct ElDistMatrix_sDummy* ElConstDistMatrix_s;
typedef const struct ElDistMatrix_dDummy* ElConstDistMatrix_d;
typedef const struct ElDistMatrix_cDummy* ElConstDistMatrix_c;
typedef const struct ElDistMatrix_zDummy* ElConstDistMatrix_z;
/* Int AbstractDistMatrix<T>::LocalWidth() const
   --------------------------------------------- */
EL_EXPORT ElError ElDistMatrixLocalWidth_i
( ElConstDistMatrix_i A, ElInt* localWidth );
EL_EXPORT ElError ElDistMatrixLocalWidth_s
( ElConstDistMatrix_s A, ElInt* localWidth );
EL_EXPORT ElError ElDistMatrixLocalWidth_d
( ElConstDistMatrix_d A, ElInt* localWidth );
EL_EXPORT ElError ElDistMatrixLocalWidth_c
( ElConstDistMatrix_c A, ElInt* localWidth );
EL_EXPORT ElError ElDistMatrixLocalWidth_z
( ElConstDistMatrix_z A, ElInt* localWidth );
/* Int AbstractDistMatrix<T>::LDim() const
   --------------------------------------- */
EL_EXPORT ElError ElDistMatrixLDim_i( ElConstDistMatrix_i A, ElInt* ldim );
EL_EXPORT ElError ElDistMatrixLDim_s( ElConstDistMatrix_s A, ElInt* ldim );
EL_EXPORT ElError ElDistMatrixLDim_d( ElConstDistMatrix_d A, ElInt* ldim );
EL_EXPORT ElError ElDistMatrixLDim_c( ElConstDistMatrix_c A, ElInt* ldim );
EL_EXPORT ElError ElDistMatrixLDim_z( ElConstDistMatrix_z A, ElInt* ldim );
/* Matrix<T>& AbstractDistMatrix<T>::Matrix() 
   ------------------------------------------ */
EL_EXPORT ElError ElDistMatrixMatrix_i( ElDistMatrix_i A, ElMatrix_i* ALoc );
EL_EXPORT ElError ElDistMatrixMatrix_s( ElDistMatrix_s A, ElMatrix_s* ALoc );
EL_EXPORT ElError ElDistMatrixMatrix_d( ElDistMatrix_d A, ElMatrix_d* ALoc );
EL_EXPORT ElError ElDistMatrixMatrix_c( ElDistMatrix_c A, ElMatrix_c* ALoc );
EL_EXPORT ElError ElDistMatrixMatrix_z( ElDistMatrix_z A, ElMatrix_z* ALoc );
/* const Matrix<T>& AbstractDistMatrix<T>::LockedMatrix() const
   ------------------------------------------------------------ */
EL_EXPORT ElError ElDistMatrixLockedMatrix_i
( ElConstDistMatrix_i A, ElConstMatrix_i* ALoc );
EL_EXPORT ElError ElDistMatrixLockedMatrix_s
( ElConstDistMatrix_s A, ElConstMatrix_s* ALoc );
EL_EXPORT ElError ElDistMatrixLockedMatrix_d
( ElConstDistMatrix_d A, ElConstMatrix_d* ALoc );
EL_EXPORT ElError ElDistMatrixLockedMatrix_c
( ElConstDistMatrix_c A, ElConstMatrix_c* ALoc );
EL_EXPORT ElError ElDistMatrixLockedMatrix_z
( ElConstDistMatrix_z A, ElConstMatrix_z* ALoc );
/* size_t AbstractDistMatrix<T>::AllocatedMemory() const
   ----------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixAllocatedMemory_i
( ElConstDistMatrix_i A, size_t* mem );
EL_EXPORT ElError ElDistMatrixAllocatedMemory_s
( ElConstDistMatrix_s A, size_t* mem );
EL_EXPORT ElError ElDistMatrixAllocatedMemory_d
( ElConstDistMatrix_d A, size_t* mem );
EL_EXPORT ElError ElDistMatrixAllocatedMemory_c
( ElConstDistMatrix_c A, size_t* mem );
EL_EXPORT ElError ElDistMatrixAllocatedMemory_z
( ElConstDistMatrix_z A, size_t* mem );
/* T* AbstractDistMatrix<T>::Buffer()
   ---------------------------------- */
EL_EXPORT ElError ElDistMatrixBuffer_i
( ElDistMatrix_i A, ElInt** buffer );
EL_EXPORT ElError ElDistMatrixBuffer_s
( ElDistMatrix_s A, float** buffer );
EL_EXPORT ElError ElDistMatrixBuffer_d
( ElDistMatrix_d A, double** buffer );
EL_EXPORT ElError ElDistMatrixBuffer_c
( ElDistMatrix_c A, complex_float** buffer );
EL_EXPORT ElError ElDistMatrixBuffer_z
( ElDistMatrix_z A, complex_double** buffer );
/* const T* AbstractDistMatrix<T>::LockedBuffer() const
   ---------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixLockedBuffer_i
( ElConstDistMatrix_i A, const ElInt** buffer );
EL_EXPORT ElError ElDistMatrixLockedBuffer_s
( ElConstDistMatrix_s A, const float** buffer );
EL_EXPORT ElError ElDistMatrixLockedBuffer_d
( ElConstDistMatrix_d A, const double** buffer );
EL_EXPORT ElError ElDistMatrixLockedBuffer_c
( ElConstDistMatrix_c A, const complex_float** buffer );
EL_EXPORT ElError ElDistMatrixLockedBuffer_z
( ElConstDistMatrix_z A, const complex_double** buffer );
/* const Grid& AbstractDistMatrix<T>::Grid() const
   ----------------------------------------------- */
EL_EXPORT ElError ElDistMatrixGrid_i
( ElConstDistMatrix_i A, ElConstGrid* grid );
EL_EXPORT ElError ElDistMatrixGrid_s
( ElConstDistMatrix_s A, ElConstGrid* grid );
EL_EXPORT ElError ElDistMatrixGrid_d
( ElConstDistMatrix_d A, ElConstGrid* grid );
EL_EXPORT ElError ElDistMatrixGrid_c
( ElConstDistMatrix_c A, ElConstGrid* grid );
EL_EXPORT ElError ElDistMatrixGrid_z
( ElConstDistMatrix_z A, ElConstGrid* grid );
/* bool AbstractDistMatrix<T>::ColConstrained() const
   -------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixColConstrained_i
( ElConstDistMatrix_i A, bool* colConst );
EL_EXPORT ElError ElDistMatrixColConstrained_s
( ElConstDistMatrix_s A, bool* colConst );
EL_EXPORT ElError ElDistMatrixColConstrained_d
( ElConstDistMatrix_d A, bool* colConst );
EL_EXPORT ElError ElDistMatrixColConstrained_c
( ElConstDistMatrix_c A, bool* colConst );
EL_EXPORT ElError ElDistMatrixColConstrained_z
( ElConstDistMatrix_z A, bool* colConst );
/* bool AbstractDistMatrix<T>::RowConstrained() const
   -------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixRowConstrained_i
( ElConstDistMatrix_i A, bool* rowConst );
EL_EXPORT ElError ElDistMatrixRowConstrained_s
( ElConstDistMatrix_s A, bool* rowConst );
EL_EXPORT ElError ElDistMatrixRowConstrained_d
( ElConstDistMatrix_d A, bool* rowConst );
EL_EXPORT ElError ElDistMatrixRowConstrained_c
( ElConstDistMatrix_c A, bool* rowConst );
EL_EXPORT ElError ElDistMatrixRowConstrained_z
( ElConstDistMatrix_z A, bool* rowConst );
/* bool AbstractDistMatrix<T>::RootConstrained() const
   --------------------------------------------------- */
EL_EXPORT ElError ElDistMatrixRootConstrained_i
( ElConstDistMatrix_i A, bool* rootConst );
EL_EXPORT ElError ElDistMatrixRootConstrained_s
( ElConstDistMatrix_s A, bool* rootConst );
EL_EXPORT ElError ElDistMatrixRootConstrained_d
( ElConstDistMatrix_d A, bool* rootConst );
EL_EXPORT ElError ElDistMatrixRootConstrained_c
( ElConstDistMatrix_c A, bool* rootConst );
EL_EXPORT ElError ElDistMatrixRootConstrained_z
( ElConstDistMatrix_z A, bool* rootConst );
/* int AbstractDistMatrix<T>::ColAlign() const
   ---------------------------------------- */
EL_EXPORT ElError ElDistMatrixColAlign_i
( ElConstDistMatrix_i A, int* colAlign );
EL_EXPORT ElError ElDistMatrixColAlign_s
( ElConstDistMatrix_s A, int* colAlign );
EL_EXPORT ElError ElDistMatrixColAlign_d
( ElConstDistMatrix_d A, int* colAlign );
EL_EXPORT ElError ElDistMatrixColAlign_c
( ElConstDistMatrix_c A, int* colAlign );
EL_EXPORT ElError ElDistMatrixColAlign_z
( ElConstDistMatrix_z A, int* colAlign );
/* int AbstractDistMatrix<T>::RowAlign() const
   ------------------------------------------- */
EL_EXPORT ElError ElDistMatrixRowAlign_i
( ElConstDistMatrix_i A, int* rowAlign );
EL_EXPORT ElError ElDistMatrixRowAlign_s
( ElConstDistMatrix_s A, int* rowAlign );
EL_EXPORT ElError ElDistMatrixRowAlign_d
( ElConstDistMatrix_d A, int* rowAlign );
EL_EXPORT ElError ElDistMatrixRowAlign_c
( ElConstDistMatrix_c A, int* rowAlign );
EL_EXPORT ElError ElDistMatrixRowAlign_z
( ElConstDistMatrix_z A, int* rowAlign );
/* int AbstractDistMatrix<T>::ColShift() const
   ------------------------------------------- */
EL_EXPORT ElError ElDistMatrixColShift_i
( ElConstDistMatrix_i A, int* colShift );
EL_EXPORT ElError ElDistMatrixColShift_s
( ElConstDistMatrix_s A, int* colShift );
EL_EXPORT ElError ElDistMatrixColShift_d
( ElConstDistMatrix_d A, int* colShift );
EL_EXPORT ElError ElDistMatrixColShift_c
( ElConstDistMatrix_c A, int* colShift );
EL_EXPORT ElError ElDistMatrixColShift_z
( ElConstDistMatrix_z A, int* colShift );
/* int AbstractDistMatrix<T>::RowShift() const
   ------------------------------------------- */
EL_EXPORT ElError ElDistMatrixRowShift_i
( ElConstDistMatrix_i A, int* rowShift );
EL_EXPORT ElError ElDistMatrixRowShift_s
( ElConstDistMatrix_s A, int* rowShift );
EL_EXPORT ElError ElDistMatrixRowShift_d
( ElConstDistMatrix_d A, int* rowShift );
EL_EXPORT ElError ElDistMatrixRowShift_c
( ElConstDistMatrix_c A, int* rowShift );
EL_EXPORT ElError ElDistMatrixRowShift_z
( ElConstDistMatrix_z A, int* rowShift );