python/core/DistMatrix.py


  # Return the local width of the matrix
  # ------------------------------------
  lib.ElDistMatrixLocalWidth_i.argtypes = \
  lib.ElDistMatrixLocalWidth_s.argtypes = \
  lib.ElDistMatrixLocalWidth_d.argtypes = \
  lib.ElDistMatrixLocalWidth_c.argtypes = \
  lib.ElDistMatrixLocalWidth_z.argtypes = \
    [c_void_p,POINTER(iType)]
  def LocalWidth(self):
    nLoc = iType()
    args = [self.obj,pointer(nLoc)]
    if   self.tag == iTag: lib.ElDistMatrixLocalWidth_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixLocalWidth_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixLocalWidth_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixLocalWidth_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixLocalWidth_z(*args)
    else: DataExcept()
    return nLoc.value

  # Return the leading dimension of the local matrix
  # ------------------------------------------------
  lib.ElDistMatrixLDim_i.argtypes = \
  lib.ElDistMatrixLDim_s.argtypes = \
  lib.ElDistMatrixLDim_d.argtypes = \
  lib.ElDistMatrixLDim_c.argtypes = \
  lib.ElDistMatrixLDim_z.argtypes = \
    [c_void_p,POINTER(iType)]
  def LDim(self):
    ldim = iType()
    args = [self.obj,pointer(ldim)]
    if   self.tag == iTag: lib.ElDistMatrixLDim_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixLDim_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixLDim_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixLDim_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixLDim_z(*args)
    else: DataExcept()
    return ldim.value

  # Return the local matrix
  # -----------------------
  lib.ElDistMatrixMatrix_i.argtypes = \
  lib.ElDistMatrixMatrix_s.argtypes = \
  lib.ElDistMatrixMatrix_d.argtypes = \
  lib.ElDistMatrixMatrix_c.argtypes = \
  lib.ElDistMatrixMatrix_z.argtypes = \
  lib.ElDistMatrixLockedMatrix_i.argtypes = \
  lib.ElDistMatrixLockedMatrix_s.argtypes = \
  lib.ElDistMatrixLockedMatrix_d.argtypes = \
  lib.ElDistMatrixLockedMatrix_c.argtypes = \
  lib.ElDistMatrixLockedMatrix_z.argtypes = \
    [c_void_p,POINTER(c_void_p)]
  def Matrix(self,locked=False):
    A = M.Matrix(self.tag,False)
    args = [self.obj,pointer(A.obj)]
    if locked:
      if   self.tag == iTag: lib.ElDistMatrixLockedMatrix_i(*args)
      elif self.tag == sTag: lib.ElDistMatrixLockedMatrix_s(*args)
      elif self.tag == dTag: lib.ElDistMatrixLockedMatrix_d(*args)
      elif self.tag == cTag: lib.ElDistMatrixLockedMatrix_c(*args)
      elif self.tag == zTag: lib.ElDistMatrixLockedMatrix_z(*args)
      else: DataExcept()
    else:
      if   self.tag == iTag: lib.ElDistMatrixMatrix_i(*args)
      elif self.tag == sTag: lib.ElDistMatrixMatrix_s(*args)
      elif self.tag == dTag: lib.ElDistMatrixMatrix_d(*args)
      elif self.tag == cTag: lib.ElDistMatrixMatrix_c(*args)
      elif self.tag == zTag: lib.ElDistMatrixMatrix_z(*args)
      else: DataExcept()
    return A

  # Return the amount of locally allocated memory
  # ---------------------------------------------
  lib.ElDistMatrixAllocatedMemory_i.argtypes = \
  lib.ElDistMatrixAllocatedMemory_s.argtypes = \
  lib.ElDistMatrixAllocatedMemory_d.argtypes = \
  lib.ElDistMatrixAllocatedMemory_c.argtypes = \
  lib.ElDistMatrixAllocatedMemory_z.argtypes = \
    [c_void_p,POINTER(c_size_t)]
  def AllocatedMemory(self):
    allocMem = c_size_t()
    args = [self.obj,pointer(allocMem)]
    if   self.tag == iTag: lib.ElDistMatrixAllocatedMemory_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixAllocatedMemory_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixAllocatedMemory_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixAllocatedMemory_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixAllocatedMemory_z(*args)
    else: DataExcept()

  # Return the local buffer
  # ----------------------
  lib.ElDistMatrixBuffer_i.argtypes = \
  lib.ElDistMatrixLockedBuffer_i.argtypes = \
    [c_void_p,POINTER(POINTER(iType))]
  lib.ElDistMatrixBuffer_s.argtypes = \
  lib.ElDistMatrixLockedBuffer_s.argtypes = \
    [c_void_p,POINTER(POINTER(sType))]
  lib.ElDistMatrixBuffer_d.argtypes = \
  lib.ElDistMatrixLockedBuffer_d.argtypes = \
    [c_void_p,POINTER(POINTER(dType))]
  lib.ElDistMatrixBuffer_c.argtypes = \
  lib.ElDistMatrixLockedBuffer_c.argtypes = \
    [c_void_p,POINTER(POINTER(cType))]
  lib.ElDistMatrixBuffer_z.argtypes = \
  lib.ElDistMatrixLockedBuffer_z.argtypes = \
    [c_void_p,POINTER(POINTER(zType))]
  def Buffer(self,locked=False):
    buf = POINTER(TagToType(self.tag))()
    args = [self.obj,pointer(buf)]
    if locked:
      if   self.tag == iTag: lib.ElDistMatrixLockedBuffer_i(*args)
      elif self.tag == sTag: lib.ElDistMatrixLockedBuffer_s(*args)
      elif self.tag == dTag: lib.ElDistMatrixLockedBuffer_d(*args)
      elif self.tag == cTag: lib.ElDistMatrixLockedBuffer_c(*args)
      elif self.tag == zTag: lib.ElDistMatrixLockedBuffer_z(*args)
      else: DataExcept()
    else:
      if   self.tag == iTag: lib.ElDistMatrixBuffer_i(*args)
      elif self.tag == sTag: lib.ElDistMatrixBuffer_s(*args)
      elif self.tag == dTag: lib.ElDistMatrixBuffer_d(*args)
      elif self.tag == cTag: lib.ElDistMatrixBuffer_c(*args)
      elif self.tag == zTag: lib.ElDistMatrixBuffer_z(*args)
      else: DataExcept()
    return buf

  # Return the process grid
  # -----------------------
  lib.ElDistMatrixGrid_i.argtypes = \
  lib.ElDistMatrixGrid_s.argtypes = \
  lib.ElDistMatrixGrid_d.argtypes = \
  lib.ElDistMatrixGrid_c.argtypes = \
  lib.ElDistMatrixGrid_z.argtypes = \
    [c_void_p,POINTER(c_void_p)]
  def Grid(self):
    grid = G.Grid()
    args = [self.obj,pointer(grid.obj)]
    if   self.tag == iTag: lib.ElDistMatrixGrid_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixGrid_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixGrid_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixGrid_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixGrid_z(*args)
    else: DataExcept()
    return grid 

  # Return true if the column alignment is pinned at a particular value
  # -------------------------------------------------------------------
  lib.ElDistMatrixColConstrained_i.argtypes = \
  lib.ElDistMatrixColConstrained_s.argtypes = \
  lib.ElDistMatrixColConstrained_d.argtypes = \
  lib.ElDistMatrixColConstrained_c.argtypes = \
  lib.ElDistMatrixColConstrained_z.argtypes = \
    [c_void_p,POINTER(bType)]
  def ColConstrained(self):
    colConst = bType() 
    args = [self.obj,pointer(colConst)]
    if   self.tag == iTag: lib.ElDistMatrixColConstrained_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixColConstrained_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixColConstrained_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixColConstrained_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixColConstrained_z(*args)
    else: DataExcept()
    return colConst.value

  # Return true if the row alignment is pinned at a particular value
  # ----------------------------------------------------------------
  lib.ElDistMatrixRowConstrained_i.argtypes = \
  lib.ElDistMatrixRowConstrained_s.argtypes = \
  lib.ElDistMatrixRowConstrained_d.argtypes = \
  lib.ElDistMatrixRowConstrained_c.argtypes = \
  lib.ElDistMatrixRowConstrained_z.argtypes = \
    [c_void_p,POINTER(bType)]
  def RowConstrained(self):
    rowConst = bType() 
    args = [self.obj,pointer(rowConst)]
    if   self.tag == iTag: lib.ElDistMatrixRowConstrained_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixRowConstrained_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixRowConstrained_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixRowConstrained_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixRowConstrained_z(*args)
    else: DataExcept()
    return rowConst.value

  # Return whether or not the root rank is pinned at a particular value
  # -------------------------------------------------------------------
  lib.ElDistMatrixRootConstrained_i.argtypes = \
  lib.ElDistMatrixRootConstrained_s.argtypes = \
  lib.ElDistMatrixRootConstrained_d.argtypes = \
  lib.ElDistMatrixRootConstrained_c.argtypes = \
  lib.ElDistMatrixRootConstrained_z.argtypes = \
    [c_void_p,POINTER(bType)]
  def RootConstrained(self):
    rootConst = bType() 
    args = [self.obj,pointer(rootConst)]
    if   self.tag == iTag: lib.ElDistMatrixRootConstrained_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixRootConstrained_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixRootConstrained_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixRootConstrained_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixRootConstrained_z(*args)
    else: DataExcept()
    return rootConst.value

  # Return the column alignment
  # ---------------------------
  lib.ElDistMatrixColAlign_i.argtypes = \
  lib.ElDistMatrixColAlign_s.argtypes = \
  lib.ElDistMatrixColAlign_d.argtypes = \
  lib.ElDistMatrixColAlign_c.argtypes = \
  lib.ElDistMatrixColAlign_z.argtypes = \
    [c_void_p,POINTER(c_int)]
  def ColAlign(self):
    align = c_int()  
    args = [self.obj,pointer(align)]
    if   self.tag == iTag: lib.ElDistMatrixColAlign_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixColAlign_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixColAlign_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixColAlign_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixColAlign_z(*args)
    else: DataExcept()
    return align.value

  # Return the row alignment
  # ------------------------
  lib.ElDistMatrixRowAlign_i.argtypes = \
  lib.ElDistMatrixRowAlign_s.argtypes = \
  lib.ElDistMatrixRowAlign_d.argtypes = \
  lib.ElDistMatrixRowAlign_c.argtypes = \
  lib.ElDistMatrixRowAlign_z.argtypes = \
    [c_void_p,POINTER(c_int)]
  def RowAlign(self):
    align = c_int()  
    args = [self.obj,pointer(align)]
    if   self.tag == iTag: lib.ElDistMatrixRowAlign_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixRowAlign_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixRowAlign_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixRowAlign_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixRowAlign_z(*args)
    else: DataExcept()
    return align.value

  # Return the column shift
  # -----------------------
  lib.ElDistMatrixColShift_i.argtypes = \
  lib.ElDistMatrixColShift_s.argtypes = \
  lib.ElDistMatrixColShift_d.argtypes = \
  lib.ElDistMatrixColShift_c.argtypes = \
  lib.ElDistMatrixColShift_z.argtypes = \
    [c_void_p,POINTER(c_int)]
  def ColShift(self):
    shift = c_int()
    args = [self.obj,pointer(shift)]
    if   self.tag == iTag: lib.ElDistMatrixColShift_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixColShift_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixColShift_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixColShift_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixColShift_z(*args)
    else: DataExcept()
    return shift.value

  # Return the row shift
  # --------------------
  lib.ElDistMatrixRowShift_i.argtypes = \
  lib.ElDistMatrixRowShift_s.argtypes = \
  lib.ElDistMatrixRowShift_d.argtypes = \
  lib.ElDistMatrixRowShift_c.argtypes = \
  lib.ElDistMatrixRowShift_z.argtypes = \
    [c_void_p,POINTER(c_int)]
  def RowShift(self):
    shift = c_int()
    args = [self.obj,pointer(shift)]
    if   self.tag == iTag: lib.ElDistMatrixRowShift_i(*args)
    elif self.tag == sTag: lib.ElDistMatrixRowShift_s(*args)
    elif self.tag == dTag: lib.ElDistMatrixRowShift_d(*args)
    elif self.tag == cTag: lib.ElDistMatrixRowShift_c(*args)
    elif self.tag == zTag: lib.ElDistMatrixRowShift_z(*args)
    else: DataExcept()
    return shift.value
